# rip-notepad-plus-plus

./: .gitignore  CLAUDE.md  README.md  generate_i18n.py  index.html  package-lock.json  package.json  translate_i18n.py  tsconfig.node.json  vitest.config.ts
docs/: AUDIT_REPORT_2026-06-15.md  PROJECT_STATUS_PHASE_0-30.md  ROADMAP_PHASE_16-30.md  ai-markdown-render-plan.md  ai-multi-tab-plan.md  ai-web-search-plan.md  i18n-languages.md  openai-api-support-plan.md
e2e/: deep-features.spec.ts  feature-coverage.spec.ts  npp-features.spec.ts  playwright.config.ts  ui-tests.spec.ts
scripts/: generate_icons.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: encoding.rs  file_ops.rs  git.rs  mod.rs  monitor.rs  plugin.rs  pty.rs  search.rs  session.rs  system.rs  terminal.rs  workspace.rs
src-tauri/src/encoding/: convert.rs  detect.rs  mod.rs
src-tauri/src/plugin_api/: manager.rs  mod.rs  types.rs
src-tauri/src/pty/: manager.rs  session.rs
src-tauri/src/search/: finder.rs
tests/: aiClient.test.ts  aiStore.test.ts  clipboardStore.test.ts  editorRefStore.test.ts  editorStore.test.ts  encodingStore.test.ts  gitStore.test.ts  i18n.test.ts  macroStore.test.ts  pluginStore.test.ts  previewEngine.test.ts  searchStore.test.ts  settingsStore.test.ts  setup.ts  uncoveredStores.test.ts  useAutoSave.test.ts  useFileDrop.test.ts  useKeyboardShortcuts.test.ts  useMacroRecorder.test.ts  useMenuActions.test.ts  (+3 more)
(+194 files in other folders)
