[package]
name = "rip-notepad-plus-plus"
version = "0.1.0"
description = "A cross-platform text editor replacement for Notepad++"
authors = ["ripNotepad++ contributors"]
edition = "2021"

[lib]
name = "rip_notepad_plus_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
