[package]
name = "rip-notepad-plus-plus"
version = "0.3.0"
description = "A cross-platform text editor replacement for Notepad++"
authors = ["ripNotepad++ contributors"]
edition = "2021"

[lib]
name = "rip_notepad_plus_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
chardetng = "0.1"
walkdir = "2"
regex = "1"
open = "5"
sys-locale = "0.3"
log = "0.4"
env_logger = "0.10"
notify = "6"
zip = "0.6"
dirs = "5"
chrono = "0.4"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.9"
